crates/runtime/src/tests/snapshots/query_from_sample_seed.snap
---
source: crates/runtime/src/tests/queries.rs
description: "\"SELECT * FROM testtable SAMPLE SYSTEM (3) SEED (82);\""
snapshot_kind: text
---
(
    Err(
        SQL(
            ParserError(
                "Expected end of statement, found: SYSTEM",
            ),
            None,
        ),
    ),
    Err(
        SQL(
            ParserError(
                "Expected end of statement, found: SYSTEM",
            ),
            None,
        ),
    ),
    Err(
        Execution(
            "Failed to create logical plan",
        ),
    ),
)
