crates/runtime/src/tests/snapshots/query_from_tablesample_all.snap
---
source: crates/runtime/src/tests/queries.rs
description: "\"SELECT * FROM testtable TABLESAMPLE (100);\""
snapshot_kind: text
---
(
    Err(
        SQL(
            ParserError(
                "Expected: identifier, found: 100",
            ),
            None,
        ),
    ),
    Err(
        SQL(
            ParserError(
                "Expected: identifier, found: 100",
            ),
            None,
        ),
    ),
    Err(
        Execution(
            "Failed to create logical plan",
        ),
    ),
)
