crates/runtime/src/tests/snapshots/query_group_by_having.snap
---
source: crates/runtime/src/tests/queries.rs
description: "\"SELECT department_id\nFROM employees\nGROUP BY department_id\nHAVING count(*) < 10;\""
snapshot_kind: text
---
(
    Ok(
        Statement(
            Query(
                Query {
                    with: None,
                    body: Select(
                        Select {
                            select_token: TokenWithSpan {
                                token: Word(
                                    Word {
                                        value: "SELECT",
                                        quote_style: None,
                                        keyword: SELECT,
                                    },
                                ),
                                span: Span(Location(0,0)..Location(0,0)),
                            },
                            distinct: None,
                            top: None,
                            top_before_distinct: false,
                            projection: [
                                UnnamedExpr(
                                    Identifier(
                                        Ident {
                                            value: "department_id",
                                            quote_style: None,
                                            span: Span(Location(0,0)..Location(0,0)),
                                        },
                                    ),
                                ),
                            ],
                            into: None,
                            from: [
                                TableWithJoins {
                                    relation: Table {
                                        name: ObjectName(
                                            [
                                                Ident {
                                                    value: "employees",
                                                    quote_style: None,
                                                    span: Span(Location(0,0)..Location(0,0)),
                                                },
                                            ],
                                        ),
                                        alias: None,
                                        args: None,
                                        with_hints: [],
                                        version: None,
                                        with_ordinality: false,
                                        partitions: [],
                                        json_path: None,
                                    },
                                    joins: [],
                                },
                            ],
                            lateral_views: [],
                            prewhere: None,
                            selection: None,
                            group_by: Expressions(
                                [
                                    Identifier(
                                        Ident {
                                            value: "department_id",
                                            quote_style: None,
                                            span: Span(Location(0,0)..Location(0,0)),
                                        },
                                    ),
                                ],
                                [],
                            ),
                            cluster_by: [],
                            distribute_by: [],
                            sort_by: [],
                            having: Some(
                                BinaryOp {
                                    left: Function(
                                        Function {
                                            name: ObjectName(
                                                [
                                                    Ident {
                                                        value: "count",
                                                        quote_style: None,
                                                        span: Span(Location(0,0)..Location(0,0)),
                                                    },
                                                ],
                                            ),
                                            uses_odbc_syntax: false,
                                            parameters: None,
                                            args: List(
                                                FunctionArgumentList {
                                                    duplicate_treatment: None,
                                                    args: [
                                                        Unnamed(
                                                            Wildcard,
                                                        ),
                                                    ],
                                                    clauses: [],
                                                },
                                            ),
                                            filter: None,
                                            null_treatment: None,
                                            over: None,
                                            within_group: [],
                                        },
                                    ),
                                    op: Lt,
                                    right: Value(
                                        Number(
                                            "10",
                                            false,
                                        ),
                                    ),
                                },
                            ),
                            named_window: [],
                            qualify: None,
                            window_before_qualify: false,
                            value_table_mode: None,
                            connect_by: None,
                        },
                    ),
                    order_by: None,
                    limit: None,
                    limit_by: [],
                    offset: None,
                    fetch: None,
                    locks: [],
                    for_clause: None,
                    settings: None,
                    format_clause: None,
                },
            ),
        ),
    ),
    Ok(
        [
            "Projection: employees.department_id",
            "  Filter: count(*) < Int64(10)",
            "    Aggregate: groupBy=[[employees.department_id]], aggr=[[count(*)]]",
            "      TableScan: employees",
        ],
    ),
    Ok(
        [
            "+---------------+",
            "| department_id |",
            "+---------------+",
            "| 1             |",
            "| 2             |",
            "+---------------+",
        ],
    ),
)
